manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: static
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: static-ingress
  namespace: static
spec:
  rules:
    - host: cv.carstens.tech
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: static-service
            servicePort: 60002
    - host: pic.carstens.tech
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: static-service
            servicePort: 60002
    - host: trash.carstens.tech
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: static-service
            servicePort: 60002
    - host: zoom.carstens.tech
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: static-service
            servicePort: 60002
    - host: carstens.tech
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: static-service
            servicePort: 60002
---
apiVersion: v1
kind: Service
metadata:
  name: static-service
  namespace: static
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: NodePort
  selector:
    app: static-files
  ports:
    - name: http
      protocol: TCP
      port: 60002
      targetPort: 80
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: static-files
  namespace: static
spec:
  selector:
    matchLabels:
      app: static-files
  template:
    metadata:
      labels:
        app: static-files
    spec:
      containers:
      - name: static-files
        image: nginx:1.19.6-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/nginx
          readOnly: true
          name: nginx-conf
        - mountPath: /var/log/nginx
          name: log
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: log
        emptyDir: {}
